warn when some standard layers are turned off not so visible for mobile users - but less of an issue there (as an uninstall/reinstall resets all options to default) for #778

--- a/style.css
+++ b/style.css
@@ -1060,3 +1060,10 @@ table.artifact td.info {
 .no-pointer-events {
   pointer-events: none;
 }
+
+
+.layer_off_warning {
+  color: #FFCE00;
+  margin: 8px;
+  text-align: center;
+}
